--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "casual": "^1.6.2",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
-    "nodemon": "^2.0.1"
+    "graphql-tools": "^4.0.6",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.7.14",
+    "nodemon": "^2.0.1",
+    "sequelize": "^5.21.2",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
